# ver-cmp

./: Cargo.toml  README.md
.github/workflows/: crates-publish.yml
src/: lib.rs  main.rs  test.rs
