[package]
name = "ver-cmp"
version = "0.1.1"
edition = "2021"
description = "A simple version comparison tool"
license = "MIT"

[dependencies]
clap = { version = "4.5.0", features = ["derive"], optional = true }

[features]
build-binary = ["clap"]

[lib]
name = "ver_cmp"
path = "src/lib.rs"

[[bin]]
name = "ver_cmp_cli"
path = "src/main.rs"
required-features = ["build-binary"]